syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";

package ApplicantEducation;

import "google/protobuf/timestamp.proto";

service ApplicantEducation{


rpc GetApplicantEducation(IdRequestApplicantEducation) returns (ApplicantEducationReply);
rpc CreateApplicantEducation(ApplicantEducationReply) returns (google.protobuf.Empty);
rpc UpdateApplicantEducation(ApplicantEducationReply) returns (google.protobuf.Empty);
rpc DeleteApplicantEducation(ApplicantEducationReply) returns (google.protobuf.Empty);



}

message IdRequestApplicantEducation {
	string Id=1;
}

message ApplicantEducationReply{
	string Id=1;
	string Applicant=2;
	string Major=3;
	string CertificateDiploma=4;
	google.protobuf.Timestamp startDate=5;
	google.protobuf.Timestamp CompletionDate=6;
	int32 CompletionPercent=7;
	bytes TimeStamp=8;
}

