syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";

package ApplicantJobApplication;

import "google/protobuf/timestamp.proto";

service ApplicantJobApplication{


rpc GetApplicantJobApplication(IdRequestApplicantJobApplication) returns (ApplicantJobApplicationReply);
rpc CreateApplicantJobApplication(IdRequestApplicantJobApplication) returns (ApplicantJobApplicationReply);
rpc UpdateApplicantJobApplication(IdRequestApplicantJobApplication) returns (ApplicantJobApplicationReply);
rpc DeleteApplicantJobApplication(IdRequestApplicantJobApplication) returns (ApplicantJobApplicationReply);



}

message IdRequestApplicantJobApplication {
	string Id=1;
}

message ApplicantJobApplicationReply{
	string Id=1;
	string Applicant=2;
	string Job = 3;
	google.protobuf.Timestamp ApplicationDate = 4;
}


